--- a/phone/menu/menu.html
+++ b/phone/menu/menu.html
@@ -37,7 +37,7 @@
 							<div class="item_title">个人项目</div>
 							<div class="item_content">
 								<div class="item_desc">
-									<div>我的第一诗</div>
+									<div>我第一诗书</div>
 									<div>My first collection of poems</div>
 									<div class="min_size3">出版物</br>Publication</div>
 								</div>
