--- a/phone/details/details.html
+++ b/phone/details/details.html
@@ -276,7 +276,7 @@
 						addDesc(htmlStr)
 					} else if (param == 1) {
 						let htmlStr =
-							'<div id="title"><b>苍耳历险记Adventures of Cang Er</b></div></br> <div id="info"> <b>年份/YEAR:</b> 2021</br> <b>客户/CLIENT:</b> 阿迪达斯三叶草adidas Originals</br> <b>团队/TEAM:</b> 蒲润Pu Run </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b><span class="ms_span"> 作者将卡通形象与adidas.三叶草元素相结合，设计了一款多人线下桌游一一苍耳历险记。游戏 适合2一8人，含有多款人物形象供玩家选择。游戏中，玩家通过掷骰子来交朋友，游戏结束时 朋友最多者茯胜。每一次的投掷具有偶然性和不确定性，也带给玩家在游戏中不同的历险经历。</span></div> <div id="desc_english">The author combines cartoon images with adidas clover elements to design a multiplayer offline board game Cale Adventures.The game is suitable for 2-8 players and contains a variety of characters for players to choose from.In the game,players make friends by rolling the dice,and the one with the most friends at the end of the game wins.Each roll has chance and uncertainty,which also brings players a different adventure in the game.</div>'
+							'<div id="title"><b>苍耳历险记Adventures of Cang Er</b></div></br> <div id="info"> <b>年份/YEAR:</b> 2021</br> <b>客户/CLIENT:</b> 阿迪达斯三叶草adidas Originals</br> <b>团队/TEAM:</b> 蒲润Pu Run </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b><span class="ms_span"> 作者将卡通形象与adidas.三叶草元素相结合，设计了一款多人线下桌游一一苍耳历险记。游戏 适合2一8人，含有多款人物形象供玩家选择。游戏中，玩家通过掷骰子来交朋友，游戏结束时 朋友最多者茯胜。每一次的投掷具有偶然性和不确定性，也带给玩家在游戏中不同的历险经 历。</span></div> <div id="desc_english">The author combines cartoon images with adidas clover elements to design a multiplayer offline board game Cale Adventures.The game is suitable for 2-8 players and contains a variety of characters for players to choose from.In the game,players make friends by rolling the dice,and the one with the most friends at the end of the game wins.Each roll has chance and uncertainty,which also brings players a different adventure in the game.</div>'
 						addDesc(htmlStr)
 					} else if (param == 2) {
 						let htmlStr =
@@ -304,7 +304,7 @@
 						addDesc(htmlStr)
 					} else if (param == 8) {
 						let htmlStr =
-							'<div id="title"><b>火花老年友好型在线社交平台 Spark senior-friendly online social platform</b></div> <div id="info"> <b>年份/YEAR:</b> 2022</br><b>团队/TEAM:</b> 蒲润Pu Run、孔嘉慧 Jiahui Kong、蒋林孜 Linzi Jiang、柯婧然Jingran Ke</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 随着时代的飞速发展，当前我国的老龄化比例越来越高，并且还有大量的空巢老人，Spark品牌致力干提供优质的老年友好型在线社交关系平台，为用户提供多样化、可靠和高质量的社交功能，增强用户与社会的情感连接，并将进一步为老年人打造在线社区，丰富他们的日常生活，希望用户在Spark点燃爱情的火花。</div> <div id="desc_english">With the rapid development of the times, the current proportion of aging in China is increasing and there are still a large number of empty nesters, Spark brand is committed to dry to provide a quality senior-friendly online social relationship platform, providing users with diverse, reliable and high-quality social features to enhance the emotional connection between users and society, and will further create an online community for the elderly to enrich their daily lives, hoping that users Ignite the spark of love at Spark.</div>'
+							'<div id="title"><b>火花老年友好型在线社交平台 Spark senior-friendly online social platform</b></div></br> <div id="info"> <b>年份/YEAR:</b> 2022</br><b>团队/TEAM:</b> 蒲润Pu Run、孔嘉慧 Jiahui Kong、蒋林孜 Linzi Jiang、柯婧然Jingran Ke </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b><span class="ms_span"> 随着时代的飞速发展，当前我国的老龄化比例越来越高，并且还有大量的空巢老人，Spark品牌致力干提供优质的老年友好型在线社交关系平台，为用户提供多样化、可靠和高质量的社交功能，增强用户与社会的情感连接，并将进一步为老年人打造在线社区，丰富他们的日常生活，希望用户在Spark点燃爱情的火花。</span></div> <div id="desc_english"></div>'
 						addDesc(htmlStr)
 					}
 					setTimeout(function() {
