--- a/web/details/details.html
+++ b/web/details/details.html
@@ -82,8 +82,8 @@
 					addAboutMe()
 				} else if (param == 1) {
 					let path = '../assets/img/苍耳历险记'
-					addImage('../assets/img/苍耳历险记/1.JPG')
-					addImage(path + '/2.JPG')
+					addImage('../assets/img/苍耳历险记/1.jpg')
+					addImage(path + '/2.jpg')
 					addImage(path + '/3.JPG')
 					addImage(path + '/4.JPG')
 					addImage(path + '/5.JPG')
