--- a/web/details/details.html
+++ b/web/details/details.html
@@ -140,8 +140,8 @@
 					addImage(path + '/7.JPG')
 					addImageButton()
 				} else if (param == 7) {
-					let path = '../assets/img/无刺电音节'
-					addImage('../assets/img/无刺电音节/1.JPG')
+					let path = '../assets/img/wcdyj'
+					addImage('../assets/img/wcdyj/1.JPG')
 					addImage(path + '/2.JPG')
 					addImage(path + '/3.JPG')
 					addImage(path + '/4.JPG')
