--- a/web/details/details.html
+++ b/web/details/details.html
@@ -141,7 +141,7 @@
 					addImageButton()
 				} else if (param == 7) {
 					let path = '../assets/img/wcdyj'
-					addImage('../assets/img/wcdyj/1.JPG')
+					addImage('../assets/img/wcdyj/1.jpg')
 					addImage(path + '/2.JPG')
 					addImage(path + '/3.JPG')
 					addImage(path + '/4.JPG')
