--- a/web/details/details.html
+++ b/web/details/details.html
@@ -41,7 +41,7 @@
 		<div id="detail"></div>
 		<div id="MeDetail" style="none">
 			<img src="../assets/img/icon/盘子.png" />
-			<img src="../assets/img/9/关于我.jpeg"
+			<img src="../assets/img/关于我/关于我.jpeg"
 				style="position: absolute;right: 578px;width: 300px;height: 300px;top: 518px;" />
 		</div>
 		<div id="tail">
@@ -97,8 +97,8 @@
 			if (param == 0) {
 				addAboutMe()
 			} else if (param == 1) {
-				let path = '../assets/img/2'
-				addImage('../assets/img/2/1.JPG')
+				let path = '../assets/img/苍耳历险记'
+				addImage('../assets/img/苍耳历险记/1.JPG')
 				addImage(path + '/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
@@ -108,17 +108,17 @@
 				addImage(path + '/8.JPG')
 				addImageButton()
 			} else if (param == 2) {
-				let path = '../assets/img/1'
+				let path = '../assets/img/No tag on me'
 				addDVD("https://www.douyin.com/aweme/v1/play/?video_id=v0d00fg10000ci0q1m3c77uculg77k2g&line=0&file_id=d650f858c270482ea0f27ae76ad8921e&sign=934d6d63cbad1eb4c3b398304dec298d&is_play_url=1&source=PackSourceEnum_AWEME_DETAIL&aid=6383")
-				addImage('../assets/img/1/2.JPG')
+				addImage('../assets/img/No tag on me/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
 				addImage(path + '/5.JPG')
 				addImage(path + '/6.JPG')
 				addImageButton()
 			} else if (param == 3) {
-				let path = '../assets/img/3'
-				addImage('../assets/img/3/1.JPG')
+				let path = '../assets/img/我第一诗书'
+				addImage('../assets/img/我第一诗书/1.JPG')
 				addImage(path + '/2.JPG')
 				addImage(path + '/4.JPG')
 				addImage(path + '/5.JPG')
@@ -128,8 +128,8 @@
 				addImage(path + '/33.JPG')
 				addImageButton()
 			} else if (param == 4) {
-				let path = '../assets/img/4'
-				addImage('../assets/img/4/1.JPG')
+				let path = '../assets/img/数字漫游'
+				addImage('../assets/img/数字漫游/1.JPG')
 				addImage(path + '/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
@@ -138,16 +138,16 @@
 				addImage(path + '/7.png')
 				addImageButton()
 			} else if (param == 5) {
-				let path = '../assets/img/5'
+				let path = '../assets/img/或许，我能阻断光吗？'
 				addDVD("https://v3-web.douyinvod.com/2055d4df53cffa6f4f1687f6d72318cc/6481b4c7/video/tos/cn/tos-cn-ve-15c001-alinc2/oganIGfVI9CVvbXBAQzAECQEeRygoBCAONhFtH/?a=6383&ch=0&cr=0&dr=0&er=0&cd=0%7C0%7C0%7C0&cv=1&br=874&bt=874&cs=0&ds=3&ft=bvTKJbQQqUumf7oZPo0OW_EklpPiX8KByMVJEj53wZ0PD-I&mime_type=video_mp4&qs=0&rc=ZDs2Ojo3aDU6NzM7MzszZ0BpM3VweTc6ZmR0bDMzNGkzM0BeMi5eNDEwNTQxLjZjYzBfYSMwYjU1cjRvLy1gLS1kLS9zcw%3D%3D&l=20230608175811C8E3FD8F442AB50C5088&btag=e00028000")
-				addImage('../assets/img/5/2.JPG')
+				addImage('../assets/img/或许，我能阻断光吗？/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
 				addImage(path + '/5.JPG')
 				addImageButton()
 			} else if (param == 6) {
-				let path = '../assets/img/6'
-				addImage('../assets/img/6/1.JPG')
+				let path = '../assets/img/张学良系列'
+				addImage('../assets/img/张学良系列/1.JPG')
 				addImage(path + '/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
@@ -156,8 +156,8 @@
 				addImage(path + '/7.JPG')
 				addImageButton()
 			} else if (param == 7) {
-				let path = '../assets/img/7'
-				addImage('../assets/img/7/1.JPG')
+				let path = '../assets/img/无刺电音节'
+				addImage('../assets/img/无刺电音节/1.JPG')
 				addImage(path + '/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
@@ -167,8 +167,8 @@
 				addImage(path + '/8.JPG')
 				addImageButton()
 			} else if (param == 8) {
-				let path = '../assets/img/8'
-				addImage('../assets/img/8/1.JPG')
+				let path = '../assets/img/火花老年友好型在线社交平台'
+				addImage('../assets/img/火花老年友好型在线社交平台/1.JPG')
 				addImage(path + '/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
