--- a/web/details/details.html
+++ b/web/details/details.html
@@ -38,7 +38,7 @@
 
 			</div>
 		</div>
-		<div id="detail"></div>
+		<div id="detail"  onclick="goDesc()"></div>
 		<div id="MeDetail" style="none">
 			<img src="../assets/img/icon/盘子.png" />
 			<img src="../assets/img/关于我/关于我.jpeg"
@@ -46,10 +46,11 @@
 		</div>
 		<div id="tail">
 			<div class="option right bottom" id="show" onclick="goDesc()">
-				<div>菜品介绍 /</div>
-				<div style="margin-top: -5px;">Introdution to dishes</div>
+				<div>作品介绍 /</div>
+				<div style="margin-top: -5px;">Introduction of works</div>
 			</div>
 		</div>
+		
 	</div>
 	<script src="../../jquery-1.7.2.js"></script>
 	<script>
@@ -139,7 +140,7 @@
 				addImageButton()
 			} else if (param == 5) {
 				let path = '../assets/img/或许，我能阻断光吗？'
-				addDVD("https://v3-web.douyinvod.com/2055d4df53cffa6f4f1687f6d72318cc/6481b4c7/video/tos/cn/tos-cn-ve-15c001-alinc2/oganIGfVI9CVvbXBAQzAECQEeRygoBCAONhFtH/?a=6383&ch=0&cr=0&dr=0&er=0&cd=0%7C0%7C0%7C0&cv=1&br=874&bt=874&cs=0&ds=3&ft=bvTKJbQQqUumf7oZPo0OW_EklpPiX8KByMVJEj53wZ0PD-I&mime_type=video_mp4&qs=0&rc=ZDs2Ojo3aDU6NzM7MzszZ0BpM3VweTc6ZmR0bDMzNGkzM0BeMi5eNDEwNTQxLjZjYzBfYSMwYjU1cjRvLy1gLS1kLS9zcw%3D%3D&l=20230608175811C8E3FD8F442AB50C5088&btag=e00028000")
+				addDVD("https://www.bilibili.com/video/BV15z4y1i7UC/")
 				addImage('../assets/img/或许，我能阻断光吗？/2.JPG')
 				addImage(path + '/3.JPG')
 				addImage(path + '/4.JPG')
@@ -189,12 +190,17 @@
 			var container = document.getElementById('MeDetail');
 			container.style.display = "block";
 			let htmlStr = `
-                <div id="aboutme" style="display:flex;justify-content:space-between; width:100%;height:700px;padding: 23px;padding-left:40px;max-width: 800px;">
-                    <div style="width:100%;font-size:23px;margin-top: 101px;"><span style="font-size:28px;"> 关于我</span><span style="font-size:28px;margin-top: -3px;display: block;">About me</span></br></br>
+                <div id="aboutme" style="display:flex;justify-content:space-between; width:25%;padding: 20px;max-width: 800px;background-color: #eedcc7;margin-left: 80px;position: fixed;bottom: 125px;left: 185px;">
+                    <div style="width:100%;font-size:25px;margin-top: 0px;">
+						<div style="border-bottom: 1px dashed;padding-bottom: 10px;">
+							<span style="font-size:28px;display: block;text-align: center;"> 关于我</span>
+							<span style="font-size:28px;margin-top: -3px;display: block;text-align:center">About me</span>
+						</div>						
+						</br>
                          蒲润，又名苍耳。2001年出生于山东青岛。在校期间曾两次参与adidas Original品牌赋能计划。在设计创作中，她经常融合温暖细小的事物。喜欢相声和猫，听说人很逗。
-                         <span style="display: block;margin-top: 4px;line-height: 21px;">Pu Run，also known as Canger. She was born in Qingdao, Shandong Province in 2001. During her school years, she participated in the adidas Original Brand Empowerment Program twice. In her design creation, she often blends warm and small things. She enjoys comedy and cats,and I heard that she is very funny.</span>
+                         <span style="display: block;margin-top: 30px;line-height: 30px;">Pu Run，also known as Canger. She was born in Qingdao, Shandong Province in 2001. During her school years, she participated in the adidas Original Brand Empowerment Program twice. In her design creation, she often blends warm and small things. She enjoys comedy and cats,and I heard that she is very funny.</span>
                     </div>
-                    
+					<div class="fixImg1"><img src="../2.png" alt=""></div>
                 </div>
             `
 			var container = document.getElementById('lun');
@@ -278,7 +284,7 @@
 			type = type == 0 ? 1 : 0;
 			if (type == 1) {
 				document.getElementById("detail").style.display = "flex";
-				document.getElementById("body").style.display = "none";
+				document.getElementById("body").style.display = "block";
 				var style = document.createElement('style');
 				// style.innerHTML = "#main {background:url(../assets/img/icon/盘子.png);background-position: -504px -356px; }";
 
@@ -291,41 +297,41 @@
 					addDesc(htmlStr)
 				} else if (param == 1) {
 					let htmlStr =
-						'<div id="title"><b>苍耳历险记Adventures of Cang Er</b></div> <div id="info"> <b>年份/YEAR:</b> 2021</br> <b>客户/CLIENT:</b> 阿迪达斯三叶草adidas Originals</br> <b>团队/TEAM:</b> 蒲润Pu Run</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 作者将卡通形象与adidas.三叶草元素相结合，设计了一款多人线下桌游一一苍耳历险记。游戏 适合2一8人，含有多款人物形象供玩家选择。游戏中，玩家通过掷骰子来交朋友，游戏结束时 朋友最多者茯胜。每一次的投掷具有偶然性和不确定性，也带给玩家在游戏中不同的历险经历。</div> <div id="desc_english">The author combines cartoon images with adidas clover elements to design a multiplayer offline board game Cale Adventures.The game is suitable for 2-8 players and contains a variety of characters for players to choose from.In the game,players make friends by rolling the dice,and the one with the most friends at the end of the game wins.Each roll has chance and uncertainty,which also brings players a different adventure in the game.</div>'
+						'<div id="title"><b>苍耳历险记</br>Adventures of Cang Er</b></div> <div id="desc"><b>项目简介:</b></br> 作者将卡通形象与adidas.三叶草元素相结合，设计了一款多人线下桌游一一苍耳历险记。游戏 适合2一8人，含有多款人物形象供玩家选择。游戏中，玩家通过掷骰子来交朋友，游戏结束时 朋友最多者茯胜。每一次的投掷具有偶然性和不确定性，也带给玩家在游戏中不同的历险经历。</div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>The author combines cartoon images with adidas clover elements to design a multiplayer offline board game Cale Adventures.The game is suitable for 2-8 players and contains a variety of characters for players to choose from.In the game,players make friends by rolling the dice,and the one with the most friends at the end of the game wins.Each roll has chance and uncertainty,which also brings players a different adventure in the game.</div>'
 					addDesc(htmlStr)
 				} else if (param == 2) {
 					let htmlStr =
-						'<div id="title"><b>No tag on me</b></div> <div id="info"> <b>年份/YEAR:</b> 2022</br> <b>客户/CLIENT:</b> 阿迪达斯三叶草adidas Originals</br> <b>团队/TEAM:</b> 蒲润Pu Run、郑宥安 Youan Zheng、龙宇祺Yuqi Long、蒋世贞Shizhen Jiang</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 该项目于2022年由阿迪达斯三叶草发起，并同年在阿迪达斯官方公众号进行展示以及上海门店线下展览。 短片讲述了五个被条框和标签束缚的女孩，在一个永不设限的三叶草女孩自信力量的感染下，接受自身不完美、找回自我的故事。这是一部关于运动与美的动画，也是girl power与自信的体现。作为一个全女生的创作团队，我们想告诉每个女孩：我们都独一无二且美好，不完美和差异，才让我们成为真正的自己。</div> <div id="desc_english">The project was initiated by adidas Originals in 2022 and was showcased on the official adidas Originals public website and exhibited offline in Shanghai stores. The short film tells the story of five girls bound by rules and labels, infected by the confident power of a clover girl who never sets limits, accepting their own imperfections and finding themselves. It is an animation about movement and beauty, and the embodiment of girl power and self-confidence. As an all-girl creative team, we want to tell every girl that we are all unique and beautiful, and that imperfections and differences are what make us who we really are.</div>'
+						'<div id="title"><b>No tag on me</b></div> <div id="desc"><b>项目简介:</b></br> 该项目于2022年由阿迪达斯三叶草发起，并同年在阿迪达斯官方公众号进行展示以及上海门店线下展览。 短片讲述了五个被条框和标签束缚的女孩，在一个永不设限的三叶草女孩自信力量的感染下，接受自身不完美、找回自我的故事。这是一部关于运动与美的动画，也是girl power与自信的体现。作为一个全女生的创作团队，我们想告诉每个女孩：我们都独一无二且美好，不完美和差异，才让我们成为真正的自己。</div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>The project was initiated by adidas Originals in 2022 and was showcased on the official adidas Originals public website and exhibited offline in Shanghai stores. The short film tells the story of five girls bound by rules and labels, infected by the confident power of a clover girl who never sets limits, accepting their own imperfections and finding themselves. It is an animation about movement and beauty, and the embodiment of girl power and self-confidence. As an all-girl creative team, we want to tell every girl that we are all unique and beautiful, and that imperfections and differences are what make us who we really are.</div>'
 					addDesc(htmlStr)
 				} else if (param == 3) {
 					let htmlStr =
-						'<div id="title"><b>我第一诗书My first collection of poems</b></div> <div id="info"> <b>年份/YEAR:</b> 2023</br> <b>团队/TEAM:</b> 蒲润Pu Run</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 项目名称“我第一诗书”是由正常语序“我的第一本诗集”经过聋人语序思维过后修改后得到的。这本以聋人视角阅读的诗集打乱了非听障人士的阅读顺序，从聋人的语序思维出发，打碎固定的文本排列，将词语重新组合。左右对照式的排版让阅读者阅读时可进行更加直观的对比。项目旨在让非听障人士从正常语序下解放出来的同时，能了解更多聋人群体的语言表达逻辑与思维方式。</div> <div id="desc_english"> The title of the project, "Me First Poems Book", was created from the normal language order of "My first collection of poems" and modified by the deaf language order thinking. This book of poems read from the perspective of a deaf person disrupts the reading order of a non-hearing person by breaking up the fixed arrangement of the text and regrouping words from a deaf person\'s linguistic order. The layout is left-right contrasted so that non-hearing readers can cross-reference left and right as they read. The project aims to free non-hearing people from the stereotyped and pale phrases in the normal language order, and at the same time to learn more about the logic of language expression and the way of thinking of the deaf community. </div>'
+						'<div id="title"><b>我第一诗书</br>My first collection of poems</b></div> <div id="desc"><b>项目简介:</b></br> 项目名称“我第一诗书”是由正常语序“我的第一本诗集”经过聋人语序思维过后修改后得到的。这本以聋人视角阅读的诗集打乱了非听障人士的阅读顺序，从聋人的语序思维出发，打碎固定的文本排列，将词语重新组合。左右对照式的排版让阅读者阅读时可进行更加直观的对比。项目旨在让非听障人士从正常语序下解放出来的同时，能了解更多聋人群体的语言表达逻辑与思维方式。</div> <div id="desc_english"><b>PROJECT PROFILE:</b> </br>The title of the project, "Me First Poems Book", was created from the normal language order of "My first collection of poems" and modified by the deaf language order thinking. This book of poems read from the perspective of a deaf person disrupts the reading order of a non-hearing person by breaking up the fixed arrangement of the text and regrouping words from a deaf person\'s linguistic order. The layout is left-right contrasted so that non-hearing readers can cross-reference left and right as they read. The project aims to free non-hearing people from the stereotyped and pale phrases in the normal language order, and at the same time to learn more about the logic of language expression and the way of thinking of the deaf community. </div>'
 					addDesc(htmlStr)
 				} else if (param == 4) {
 					let htmlStr =
-						'<div id="title"><b>数字漫游 Digital Wandering</b></div> <div id="info"> <b>年份/YEAR:</b> 2023</br><b>团队/TEAM:</b> 蒲润Pu Run</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 人们面对每天源源不断的数字推送时，大脑偶尔会出现“死机”“卡顿”的状况。当大脑放空时，我们似乎在经历一场数字漫游。这场漫游不受地域、时间和身份的限制，通过互联网和数字媒体进行虚拟的旅行和探索，让人们在信息轰炸下的节奏中得到暂时的休憩。项目呈现了人们在浏览不同互联网数字讯息时所经历的心理和情感状态，以及对此现象的思考和探索。</div> <div id="desc_english">The author combines suitable for 2-8 players and contains a variety of characters for players to choose from.In the game,players make friends by rolling the dice,and the one with the most friends at the end of the game wins.Each roll has chance and uncertainty,which also brings players a different adventure in the game.</div>'
+						'<div id="title"><b>数字漫游</br>Digital Wandering</b></div>  <div id="desc"><b>项目简介:</b></br> 人们面对每天源源不断的数字推送时，大脑偶尔会出现“死机”“卡顿”的状况。当大脑放空时，我们似乎在经历一场数字漫游。这场漫游不受地域、时间和身份的限制，通过互联网和数字媒体进行虚拟的旅行和探索，让人们在信息轰炸下的节奏中得到暂时的休憩。项目呈现了人们在浏览不同互联网数字讯息时所经历的心理和情感状态，以及对此现象的思考和探索。</div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>The author combines suitable for 2-8 players and contains a variety of characters for players to choose from.In the game,players make friends by rolling the dice,and the one with the most friends at the end of the game wins.Each roll has chance and uncertainty,which also brings players a different adventure in the game.</div> '
 					addDesc(htmlStr)
 				} else if (param == 5) {
 					let htmlStr =
-						'<div id="title"><b>我能阻断光吗？Perhaps,can I block the light?</b></div> <div id="info"> <b>年份/YEAR:</b> 2022</br><b>团队/TEAM:</b> 蒲润Pu Run</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 在作品中，作者使用多种材料试图切断光的延续，但都无法彻底阻断。通过这种“无聊”的记叙方式来讨论当下人们面对的各种外界因素影响与正在做的事之间的关系，以及自我与外界因素之间的平衡的重新思考</div> <div id="desc_english">In the work, the author uses various materials to try to cut off the continuity of light, but none of them can be completely blocked. Through this "boring" narrative, the author discusses the relationship between the various external influences and what people are doing, and the rethinking of the balance between the self and the external factors.</div>'
+						'<div id="title"><b>或许，我能阻断光吗？</br>Perhaps,can I block the light?</b></div> <div id="desc"><b>项目简介:</b></br> 在作品中，作者使用多种材料试图切断光的延续，但都无法彻底阻断。通过这种“无聊”的记叙方式来讨论当下人们面对的各种外界因素影响与正在做的事之间的关系，以及自我与外界因素之间的平衡的重新思考</div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>In the work, the author uses various materials to try to cut off the continuity of light, but none of them can be completely blocked. Through this "boring" narrative, the author discusses the relationship between the various external influences and what people are doing, and the rethinking of the balance between the self and the external factors.</div>'
 					addDesc(htmlStr)
 				} else if (param == 6) {
 					let htmlStr =
-						'<div id="title"><b>张学良系列 Zhang Xueliang Serie</b></div> <div id="info"> <b>年份/YEAR:</b> 2021</br><b>团队/TEAM:</b> 蒲润Pu Run</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 项目的灵感来源是单田芳先生关于张作霖和张学良生平的长篇单口相声，作者围绕张学良和其他四位与他有重大关系的人物进行设计再现，重现了种种年代往事。该项目不仅是对英雄的致敬，也是对历史的重温与追溯。 </div> <div id="desc_english">The project was inspired by Mr.Tianfang  Shan\'s long monologue about the lives of Zuolin Zhang and Xueliang Zhang . The author designed a recreation around Xueliang Zhang and four other characters with whom he had a significant relationship, recreating all kinds of past events of the era. The project is not only a tribute to the heroes, but also a revisiting and retracing of history.</div>'
+						'<div id="title"><b>张学良系列</br>Zhang Xueliang Serie</b></div>  <div id="desc"><b>项目简介:</b></br> 项目的灵感来源是单田芳先生关于张作霖和张学良生平的长篇单口相声，作者围绕张学良和其他四位与他有重大关系的人物进行设计再现，重现了种种年代往事。该项目不仅是对英雄的致敬，也是对历史的重温与追溯。 </div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>The project was inspired by Mr.Tianfang  Shan\'s long monologue about the lives of Zuolin Zhang and Xueliang Zhang . The author designed a recreation around Xueliang Zhang and four other characters with whom he had a significant relationship, recreating all kinds of past events of the era. The project is not only a tribute to the heroes, but also a revisiting and retracing of history.</div>'
 					addDesc(htmlStr)
 				} else if (param == 7) {
 					let htmlStr =
-						'<div id="title"><b>无刺电音节 No thorn electric music festival</b></div> <div id="info"> <b>年份/YEAR:</b> 2022</br><b>客户/CLIENT: </b>网易放刺 FEVER</br><b>团队/TEAM:</b> 蒲润Pu Run、丁一珈Yijia Ding、李涵颖Hanying Li</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 项目以思考水果壳的“刺”与人心中的“刺”之间的关系展开。从思考快节奏时代下人们该如何重现伪装下纯粹的自己出发，在展示在有刺与无刺之间每个水果的情感的变化的同时，也希望观众思考是否自己也都有着像水果表面上刺一样尖锐的“保护壳”。项目旨在让观众看展的同时放松被禁锢的柔软内心，让赤裸而纯粹的自己重现。与我们一起来点儿快乐维生素。</div> <div id="desc_english">The project begins with a consideration of the relationship between the "thorns" of the fruit shells and the "thorns" of the human heart. It starts from thinking about how to recreate one\'s pure self under the disguise in the fast-paced era, and while showing the change of emotion of each fruit between thorny and non-thorny, it also hopes that the audience will think about whether they all have the same sharp "protective shell" as the thorns on the surface of the fruit. The aim of the project is to let the audience relax the softness of their confined hearts while watching the exhibition, and to let their naked and pure selves reappear. Join us for some happy vitamins.</div>'
+						'<div id="title"><b>无刺电音节</br>No thorn electric music festival</b></div><div id="desc"><b>项目简介:</b></br> 项目以思考水果壳的“刺”与人心中的“刺”之间的关系展开。从思考快节奏时代下人们该如何重现伪装下纯粹的自己出发，在展示在有刺与无刺之间每个水果的情感的变化的同时，也希望观众思考是否自己也都有着像水果表面上刺一样尖锐的“保护壳”。项目旨在让观众看展的同时放松被禁锢的柔软内心，让赤裸而纯粹的自己重现。与我们一起来点儿快乐维生素。</div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>The project begins with a consideration of the relationship between the "thorns" of the fruit shells and the "thorns" of the human heart. It starts from thinking about how to recreate one\'s pure self under the disguise in the fast-paced era, and while showing the change of emotion of each fruit between thorny and non-thorny, it also hopes that the audience will think about whether they all have the same sharp "protective shell" as the thorns on the surface of the fruit. The aim of the project is to let the audience relax the softness of their confined hearts while watching the exhibition, and to let their naked and pure selves reappear. Join us for some happy vitamins.</div>'
 					addDesc(htmlStr)
 				} else if (param == 8) {
 					let htmlStr =
-						'<div id="title"><b>火花老年友好型在线社交平台 Spark senior-friendly online social platform</b></div> <div id="info"> <b>年份/YEAR:</b> 2022</br><b>团队/TEAM:</b> 蒲润Pu Run、孔嘉慧 Jiahui Kong、蒋林孜 Linzi Jiang、柯婧然Jingran Ke</br> </div> <div id="desc"><b>项目简介/PROJECT PROFILE:</b></br> 随着时代的飞速发展，当前我国的老龄化比例越来越高，并且还有大量的空巢老人，Spark品牌致力干提供优质的老年友好型在线社交关系平台，为用户提供多样化、可靠和高质量的社交功能，增强用户与社会的情感连接，并将进一步为老年人打造在线社区，丰富他们的日常生活，希望用户在Spark点燃爱情的火花。</div> <div id="desc_english">With the rapid development of the times, the current proportion of aging in China is increasing and there are still a large number of empty nesters, Spark brand is committed to dry to provide a quality senior-friendly online social relationship platform, providing users with diverse, reliable and high-quality social features to enhance the emotional connection between users and society, and will further create an online community for the elderly to enrich their daily lives, hoping that users Ignite the spark of love at Spark.</div>'
+						'<div id="title"><b>火花老年友好型在线社交平台</br>Spark senior-friendly online social platform</b></div> <div id="desc"><b>项目简介:</b></br> 随着时代的飞速发展，当前我国的老龄化比例越来越高，并且还有大量的空巢老人，Spark品牌致力干提供优质的老年友好型在线社交关系平台，为用户提供多样化、可靠和高质量的社交功能，增强用户与社会的情感连接，并将进一步为老年人打造在线社区，丰富他们的日常生活，希望用户在Spark点燃爱情的火花。</div> <div id="desc_english"><b>PROJECT PROFILE:</b></br>With the rapid development of the times, the current proportion of aging in China is increasing and there are still a large number of empty nesters, Spark brand is committed to dry to provide a quality senior-friendly online social relationship platform, providing users with diverse, reliable and high-quality social features to enhance the emotional connection between users and society, and will further create an online community for the elderly to enrich their daily lives, hoping that users Ignite the spark of love at Spark.</div>'
 					addDesc(htmlStr)
 				}
 				setTimeout(function () {
 					$("#detail>div").animate({
 						"margin-top": "0px",
-					}, 700, "linear");
+					}, 3000, "linear");
 				}, 0)
 			} else {
 				window.location.reload()
@@ -349,7 +355,7 @@
 
 		function addDesc(htmlStr) {
 			var container = document.getElementById('detail');
-			container.innerHTML = "<div><div>" + htmlStr + "</div></div>";
+			container.innerHTML = '<div><div>' + htmlStr + "</div></div>" +'<div class="fixImg"><img src="../2.png" alt=""></div>';
 		}
 		delOffset();
 
